logs/Slang/generated/hdlconv/hdlconvertor_p735.sv.log
name: hdlconvertor_p735
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:1:16: error: port 'addr' has no I/O member declaration
module my_mem (addr, data);
               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:1:22: error: port 'data' has no I/O member declaration
module my_mem (addr, data);
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:21:16: error: expected expression
vdff #(.delay( ),.size(10) ) mod_d (.out(out_d),.in(in_d),.clk(clk));
               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:27:8: error: identifier 'size' used before its declaration
input [size-1:0] in;
       ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:25:11: note: declared here
parameter size=5, delay=1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:30:8: error: identifier 'size' used before its declaration
logic [size-1:0] out;
       ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p735.sv:25:11: note: declared here
parameter size=5, delay=1;
          ^
